Aligned grid correctly to the center

--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
   color: #fdfffc;
 }
 
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .nav {
   background-color: #011627;
   display: flex;
@@ -24,4 +30,11 @@
   width: 500px;
   height: 500px;
   display: grid;
+}
+
+.content {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
